# native-js-bridge

./: Cargo.toml  biome.json
crates/native-js-bridge-cli/: Cargo.toml
crates/native-js-bridge-cli/src/: main.rs  shim_template.js
